- Implemented the std statistics function, that calculates the standard
  deviation of a particular ndhist axis.

- Implemented the var statistics function, that calculates the variance of a
  particular ndhist axis.

- Implemented the median statistics function, that calculates the median value
  of a particular ndhist axis.

- Generalized the mean statistics function into the moment statistics function.
  The mean is defined as just the first moment.

- Added the ``stats`` python module holding utility functions for calculating
  statistics quantities from a ndhist object. For now only the ``mean`` function
  exists.

- Added histsave and histload C++ functions to save/load ndhist C++ objects to
  HDF files. It calls the Python function histsave and histload implemented in
  the storage.py python module of the ndhist package.

- Added the ``storage`` Python module to save/load a ndhist object to a HDF
  file from Python.

- Added the ndhist properties ``full_binentries``, ``full_bincontent``, and
  ``full_squaredweights``, that return ndarrays including possible under- and
  overflow bins. These properties are useful for later storage of the entire
  histogram to a file.

- When creating a ndhist object, make sure, that the given axis objects are
  unique objects. If not, make them unique.

- Implemented the ``ndzip`` utility function for creating structured ndarrays
  for filling of high dimensional histograms in a convienient way.

- Implement the fill procedure also for a structured ndarray
  given as ndvalues object. (generic_nd_traits) The fill code is generalized and
  is used by both methods to avoid code repetition.

- Implemented the binerror ndhist property, that is just the square root value
  of the sum of weights squared values.

- Implemented the lower_binedges Axis property.

- Implemented the upper_binedges Axis property.

- Added unit test for the constant_bin_width_axis Axis class.
