@@ -21,6 +21,7 @@ namespace stats {
 void register_mean();
 void register_median();
 void register_moment();
+void register_skewness();
 void register_std();
 void register_var();
 
@@ -35,6 +36,7 @@ void register_stats_module()
         stats::register_mean();
         stats::register_median();
         stats::register_moment();
+        stats::register_skewness();
         stats::register_std();
         stats::register_var();
     }
